# Astrolabe

./: README.md  next.config.js  package-lock.json  package.json  run-dev.sh  tsconfig.tsbuildinfo
.github/workflows/: release.yml
assets/: types.ts
assets/edges/effects/: DataStream.tsx  EnergyPulse.tsx  FlowingParticles.tsx  GlowLine.tsx  Lightning.tsx  Sparkle.tsx
assets/nodes/shapes/: Cone.tsx  Cylinder.tsx  Ring.tsx  Sphere.tsx  Torus.tsx  TorusKnot.tsx
backend/: README.md  pyproject.toml
backend/astrolabe/: canvas.py  lean_lsp.py  lsp_cache.py  project.py  server.py  unified_storage.py
backend/astrolabe/analysis/: __init__.py  advanced.py  centrality.py  clustering.py  community.py  dag.py  degree.py  embedding.py  entropy.py  geometry.py  graph_builder.py  lean_namespace.py  lean_quality.py  lean_types.py  link_prediction.py  optimal_transport.py  pattern.py  statistics.py  structural.py  topology.py
backend/astrolabe/models/: edge.py  node.py
backend/astrolabe/parsers/: ilean_parser.py
backend/tests/: test_advanced_analysis.py  test_canvas.py  test_canvas_3d.py  test_canvas_api.py  test_canvas_api_unified.py  test_canvas_migration.py  test_dag_analysis.py  test_graph_selection.py  test_lean_lsp.py  test_lsp_cache.py  test_lsp_diagnostics.py  test_lsp_status_sync.py  test_models.py  test_new_analysis.py  test_node_status.py  test_reset_all_data.py  test_structural_analysis.py  test_unified_storage.py  test_unified_storage_canvas.py
docs/: immediate-optimizations.md  large-graph-visualization-research.md
scripts/: build-release.sh
src-tauri/: tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: DevPanel.tsx  EdgeStylePanel.tsx  LensIndicator.tsx  LensPicker.tsx  LensSettingsPanel.tsx  SearchPanel.tsx
src/components/graph/: ForceGraph2D.tsx  index.ts
src/components/graph3d/: BatchedEdges.tsx  BubbleContextMenu.tsx  Edge3D.tsx  ForceGraph3D.tsx  ForceLayout.tsx  ForceLayoutWorker.tsx  Node3D.tsx
src/hooks/: index.ts  useFileWatch.ts  useForceLayout3DWorker.ts  useGraphData.ts  useLayout.ts  useLensPickerShortcut.ts  useLensedGraph.ts  useUndoShortcut.ts
src/lib/: api.ts  canvasStore.ts  devMode.ts  errorSuppression.ts  graphProcessing.ts  lensStore.ts  namespaceBubbleStyles.ts  nodeLifecycle.ts  selectionStore.ts  store.ts
src/types/: graph.ts  node.ts
src/workers/: forceLayout3D.worker.ts
(+49 files in other folders)
