[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astrolabe"
version = "0.1.7"
description = "Astrolabe: your Lean"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Xinze Li" }
]
dependencies = [
    "watchfiles>=0.21",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    # Network analysis
    "networkx>=3.0",
    "scipy>=1.10",
    "numpy>=1.24",
    "python-louvain>=0.16",
    "scikit-learn>=1.3",  # For community comparison metrics
    # Statistical analysis
    "powerlaw>=1.5",  # Power law distribution fitting
    "pandas>=2.0",  # Data manipulation and correlation analysis
    # Optimal transport & Ricci curvature
    "GraphRicciCurvature>=0.5",  # Ollivier-Ricci and Forman-Ricci curvature
    "POT>=0.9",  # Python Optimal Transport
]

[project.optional-dependencies.topology]
# Optional: Heavy dependencies for topological data analysis
dependencies = [
    "gudhi>=3.8",  # Betti numbers, persistent homology
    "giotto-tda>=0.6",  # TDA toolkit
    "kmapper>=2.0",  # Mapper algorithm
]

[project.optional-dependencies.embedding]
# Optional: Dependencies for graph embedding
dependencies = [
    "node2vec>=0.4",  # Node2Vec embedding
    "umap-learn>=0.5",  # UMAP embedding
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",  # For FastAPI TestClient
]

[tool.hatch.build.targets.wheel]
packages = ["astrolabe"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
